[gd_scene load_steps=14 format=3 uid="uid://bdw326i43i5kq"]

[ext_resource type="Script" path="res://SceneSystem/Scenes/opening_scene.gd" id="1_uq0ag"]
[ext_resource type="PackedScene" uid="uid://dr74ndnovetm5" path="res://Models/Raw/ms_egypt.glb" id="2_606hw"]
[ext_resource type="PackedScene" uid="uid://dt25uhj4wbyji" path="res://Models/Raw/ms_forest.glb" id="3_5jxkq"]
[ext_resource type="PackedScene" uid="uid://dn62tihoyscln" path="res://Models/Raw/ms_ice.glb" id="4_1viyd"]
[ext_resource type="PackedScene" uid="uid://dllygtehkk2y6" path="res://Models/Raw/ms_sky.glb" id="5_lgdie"]
[ext_resource type="PackedScene" uid="uid://ia1x8uknig70" path="res://Models/Raw/ms_snow.glb" id="6_0mjh5"]
[ext_resource type="PackedScene" uid="uid://cey7tyf7jjrip" path="res://Models/Raw/ms_tree.glb" id="7_tuje3"]
[ext_resource type="PackedScene" uid="uid://8vkthewifeb5" path="res://Models/Raw/ms_Tund.glb" id="8_4s1nk"]
[ext_resource type="PackedScene" uid="uid://c60u3gl3uum2p" path="res://Models/Raw/ms_water.glb" id="9_5mx0d"]
[ext_resource type="PackedScene" uid="uid://co3n5kpsbl54" path="res://Models/Raw/Tank_Player.glb" id="10_w0klu"]
[ext_resource type="PackedScene" uid="uid://3seeo1b8du62" path="res://Models/Raw/Tank_Easy.glb" id="11_qu63h"]
[ext_resource type="PackedScene" uid="uid://dfuf3g2xbaes4" path="res://Models/Raw/Tank_Normal.glb" id="12_h3w3h"]
[ext_resource type="PackedScene" uid="uid://bsq7mkqctrokb" path="res://Models/Raw/Tank_Hard.glb" id="13_ysp1w"]

[node name="opening_scene" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 0.9, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("1_uq0ag")

[node name="ms_egypt" parent="." instance=ExtResource("2_606hw")]
transform = Transform3D(-0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
visible = false

[node name="ms_forest" parent="." instance=ExtResource("3_5jxkq")]
transform = Transform3D(-0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
visible = false

[node name="ms_ice" parent="." instance=ExtResource("4_1viyd")]
transform = Transform3D(-0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
visible = false

[node name="ms_sky" parent="." instance=ExtResource("5_lgdie")]
transform = Transform3D(-0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
visible = false

[node name="ms_snow" parent="." instance=ExtResource("6_0mjh5")]
transform = Transform3D(-0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
visible = false

[node name="ms_tree" parent="." instance=ExtResource("7_tuje3")]
transform = Transform3D(-0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
visible = false

[node name="ms_Tund" parent="." instance=ExtResource("8_4s1nk")]
transform = Transform3D(-0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
visible = false

[node name="ms_water" parent="." instance=ExtResource("9_5mx0d")]
transform = Transform3D(-0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
visible = false

[node name="Tank_Player" parent="." instance=ExtResource("10_w0klu")]
transform = Transform3D(0.0593919, 5.19221e-09, 0.00852042, -5.24537e-09, 0.06, 0, 0.00852042, 7.44879e-10, -0.0593919, 0.9575, 0, 4.4756)

[node name="Tank_Player2" parent="." instance=ExtResource("10_w0klu")]
transform = Transform3D(0.0563175, 4.92343e-09, -0.0206963, -5.24537e-09, 0.06, 0, -0.0206963, -1.80933e-09, -0.0563175, -1.46081, 0.923845, 7.16958)

[node name="Tank_Easy" parent="." instance=ExtResource("11_qu63h")]
transform = Transform3D(-0.057438, -5.02139e-09, 0.0173459, -5.24537e-09, 0.06, 0, 0.0173459, 1.51643e-09, 0.057438, -6.59098, 1.80997, -6.62752)

[node name="Tank_Normal" parent="." instance=ExtResource("12_h3w3h")]
transform = Transform3D(-0.04677, 0, 0.0176795, 0, 0.05, 0, 0.0176795, 0, 0.04677, -3.66726, 0.928983, -5.63252)

[node name="Tank_Hard" parent="." instance=ExtResource("13_ysp1w")]
transform = Transform3D(-0.0583624, -5.1022e-09, -0.0139222, -5.24537e-09, 0.06, 0, -0.0139222, -1.21712e-09, 0.0583624, 3.98114, 0, -5.48319)
